--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -56,14 +56,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.725" />
+        app:layout_constraintGuide_percent="0.78" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_account_7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.93" />
+        app:layout_constraintGuide_percent="0.976" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_account_8"
@@ -78,6 +78,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.68" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_account_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.93" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/photo"
@@ -113,11 +120,12 @@
         android:clickable="true"
         android:contentDescription="@string/change_username"
         android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="@+id/email"
         app:layout_constraintDimensionRatio="2.1:1"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_account_10"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@id/guideline_account_4"
-        app:layout_constraintTop_toBottomOf="@+id/photo"
+        app:layout_constraintStart_toStartOf="@+id/guideline_account_9"
+        app:layout_constraintTop_toTopOf="@+id/guideline_account_2"
         app:srcCompat="@drawable/pencil" />
 
     <TextView
@@ -126,6 +134,7 @@
         android:layout_height="0dp"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline_account_6"
         app:layout_constraintDimensionRatio="4.5:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline_account_4"
@@ -140,6 +149,7 @@
         android:layout_height="0dp"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintDimensionRatio="4.5:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline_account_4"
@@ -153,6 +163,7 @@
         android:layout_height="0dp"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/total_games"
         app:layout_constraintDimensionRatio="4.5:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline_account_4"
@@ -166,6 +177,7 @@
         android:layout_height="0dp"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/score"
         app:layout_constraintDimensionRatio="4.5:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline_account_4"
@@ -179,6 +191,7 @@
         android:layout_height="0dp"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/wins"
         app:layout_constraintDimensionRatio="4.5:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline_account_4"
@@ -200,7 +213,7 @@
 
     <TextView
         android:id="@+id/plus"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
