--- a/app/src/main/res/layout/card_view_leaderboard.xml
+++ b/app/src/main/res/layout/card_view_leaderboard.xml
@@ -12,16 +12,19 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageview"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/photo"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/icon"
+            android:layout_height="0dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1:1.2"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/account"/>
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+            app:srcCompat="@drawable/account" />
 
         <TextView
             android:id="@+id/username"
@@ -35,7 +38,7 @@
             android:paddingEnd="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="5.2:1"
-            app:layout_constraintStart_toEndOf="@+id/imageview"
+            app:layout_constraintStart_toEndOf="@id/photo"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -48,8 +51,9 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="2:1"
+            app:layout_constraintDimensionRatio="2.2:1"
             app:layout_constraintEnd_toStartOf="@+id/score"
+            app:layout_constraintHorizontal_bias="0.487"
             app:layout_constraintStart_toEndOf="@+id/username"
             app:layout_constraintTop_toTopOf="parent" />
 
